# py-telegram-bot

./: pyproject.toml
py-telegram-bot/: main.py  tokens.env
src/: db_med.xlsx
