[tool.poetry]
name = "py-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Raphael Coelho <raphael.phael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
telegram = "^0.0.1"
colorama = "^0.4.6"
pandas = "^2.2.1"
schedule = "^1.2.1"
tabulate = "^0.9.0"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
telebot = "^0.0.5"
python-telegram-bot = "^20.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
